Alert not popping up. Trying to debug.

--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Categories Checker Extension</title>
-    <script src="popup.js"></script>
   </head>
   <body>
     <button id="checkButton">Check Categories</button>
+    <script src="popup.js"></script> <!-- Moved to the end of the body -->
   </body>
 </html>
