Added a text field which assigns the text to a variable.

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,8 @@
     <title>Categories Checker Extension</title>
   </head>
   <body>
+    <input type="text" id="textInput" placeholder="Paste categories here" />
     <button id="checkButton">Check Categories</button>
-    <script src="popup.js"></script> <!-- Moved to the end of the body -->
+    <script src="popup.js"></script>
   </body>
 </html>
