feat: display categories with highlighting and separators
- Added functionality to display each category in `myArray` with "; " separators
- Highlighted unmatched categories in red using `.not-matched` CSS class
- Adjusted code to omit the separator after the last category for cleaner display

--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Categories Checker Extension</title>
-  </head>
-  <body>
-    <input type="text" id="textInput" placeholder="Paste categories here" />
-    <button id="checkButton">Check Categories</button>
-    <script src="popup.js"></script>
-  </body>
+<head>
+  <title>Categories Checker Extension</title>
+  <link rel="stylesheet" href="popup.css">
+</head>
+<body>
+  <input type="text" id="textInput" placeholder="Paste categories here" />
+  <button id="checkButton">Check Categories</button>
+  <div id="resultsContainer"></div>
+  <script src="popup.js"></script>
+</body>
 </html>
