feat: enhance extension with dark mode styling and robust UI
- Applied Space Mono font and dark mode color scheme for a retro-modern look
- Added red highlight for unmatched categories with `.not-matched` class
- Improved layout with line breaks and inner padding for readability
- Ensured `resultsContainer` clears on each "Check Categories" click to prevent duplicate entries
- Added uneditable matched categories field with easy copy functionality

UI is now optimized for usability, with a clean, dark theme and responsive behavior.

--- a/popup.html
+++ b/popup.html
@@ -6,8 +6,14 @@
 </head>
 <body>
   <input type="text" id="textInput" placeholder="Paste categories here" />
+  <br>
+  <br>
   <button id="checkButton">Check Categories</button>
+  <br>
   <div id="resultsContainer"></div>
+  <br>
+  <input type="text" id="matchedField" readonly placeholder="No valid categories" />
+  <br>
   <script src="popup.js"></script>
 </body>
 </html>
