feat: added copy button and improved UI styling for enhanced usability
- Added a 'Copy' button to allow users to easily copy matched categories
- Polished UI styling for better alignment and visual clarity
- Added custom icons
- Enhanced layout with consistent spacing and updated color scheme for a professional look

--- a/popup.html
+++ b/popup.html
@@ -6,14 +6,10 @@
 </head>
 <body>
   <input type="text" id="textInput" placeholder="Paste categories here" />
-  <br>
-  <br>
   <button id="checkButton">Check Categories</button>
-  <br>
   <div id="resultsContainer"></div>
-  <br>
   <input type="text" id="matchedField" readonly placeholder="No valid categories" />
-  <br>
+<button id="copyButton">Copy</button>
   <script src="popup.js"></script>
 </body>
 </html>
