--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Categories Checker Extension</title>
+  <title>PredictLeads Categories Checker Extension</title>
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
+  <strong style="color: #ab8abf;">PredictLeads CategoriesChecker</strong>
+  <br>
   <input type="text" id="textInput" placeholder="Paste categories here" />
   <button id="checkButton">Check Categories</button>
   <div id="resultsContainer"></div>
