Minor UI changes

--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <strong style="color: #ab8abf;">PredictLeads CategoriesChecker</strong>
+  <strong style="color: #ab8abf; font-size: 1rem;">PL CategoriesChecker</strong>
   <br>
   <input type="text" id="textInput" placeholder="Paste categories here" />
   <button id="checkButton">Check Categories</button>
